unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/ebotdata__Bot_Chat_Log__c.object-meta.xml
<CustomObject>
    <description>Track each chat log record and any relevant information thru a backend process</description>
    <label>Bot Chat Log</label>
    <nameField>
        <displayFormat>BLG-{00000}</displayFormat>
        <label>Bot Chat Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bot Chat Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>