unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Bot_Session__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Bot_Session__c</fullName>
    <description>Bot Chat Session</description>
    <inlineHelpText>Einstein Bot Chat Session</inlineHelpText>
    <label>Bot Chat Session</label>
    <referenceTo>ebotdata__Bot_Session__c</referenceTo>
    <relationshipLabel>Bot Chat Logs</relationshipLabel>
    <relationshipName>Bot_Chat_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>