unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Business_Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Business_Metric_Type__c</fullName>
    <description>Information about the business metric for the dialog/intent</description>
    <label>Business Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Start</fullName>
            </value>
            <value>
                <fullName>End</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Escalation Start</fullName>
            </value>
            <value>
                <fullName>Escalation End</fullName>
            </value>
            <value>
                <fullName>Offered Followup Question</fullName>
            </value>
            <value>
                <fullName>Followup - Yes Response</fullName>
            </value>
            <value>
                <fullName>Followup - No Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>