unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Chat_Button_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Chat_Button_Name__c</fullName>
    <formula>ebotdata__Bot_Session__r.ebotdata__Chat_Button_Name__c</formula>
    <label>Chat Button Name</label>
    <type>Text</type>
</CustomField>