unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Current_Confidence_For_Utterance__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Confidence_For_Utterance__c</fullName>
    <description>The confidence for the last utterance(0-1)</description>
    <inlineHelpText>The confidence for the last utterance(0-1)</inlineHelpText>
    <label>Current Confidence For Utterance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>