unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Current_Dialog_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Dialog_Id__c</fullName>
    <description>The id of the current dialog</description>
    <inlineHelpText>The id of the current dialog</inlineHelpText>
    <label>Current Dialog Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>