unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Current_Dialog_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Dialog_Name__c</fullName>
    <description>The name of the current dialog</description>
    <inlineHelpText>The name of the current dialog</inlineHelpText>
    <label>Current Dialog Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>