unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Current_Threshold_High__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Threshold_High__c</fullName>
    <description>The current model&#39;s threshold(0-1)</description>
    <inlineHelpText>The current model&#39;s threshold(0-1)</inlineHelpText>
    <label>Current Threshold High</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>