unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Current_Utterance__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Current_Utterance__c</fullName>
    <label>Current Utterance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>