unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Data_Field_1__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Data_Field_1__c</fullName>
    <label>Data Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>