unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Data_Field_2__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Data_Field_2__c</fullName>
    <label>Data Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>