unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Escalation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Reason__c</fullName>
    <description>Escalation By Design / Not By Design</description>
    <inlineHelpText>Escalation By Design / Not By Design</inlineHelpText>
    <label>Escalation Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>