unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Escalation_Result__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Escalation_Result__c</fullName>
    <label>Escalation Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agents Available</fullName>
            </value>
            <value>
                <fullName>No Agents Available</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Case Already Created</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>