unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Intent_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Intent_Name__c</fullName>
    <description>Intent Name</description>
    <inlineHelpText>Intent Name</inlineHelpText>
    <label>Intent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>