unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Intent_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Intent_Type__c</fullName>
    <description>Intent Type</description>
    <inlineHelpText>Intent Type</inlineHelpText>
    <label>Intent Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>