unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Live_Agent_Session_Id__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Live_Agent_Session_Id__c</fullName>
    <description>This maps to the ChatKey column in LiveChatTranscirpt object</description>
    <inlineHelpText>This maps to the ChatKey column in LiveChatTranscirpt object</inlineHelpText>
    <label>Live Agent Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>