unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Successful_Resolution__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Successful_Resolution__c</fullName>
    <description>A successful resolution result is logged from the Einstein Bot</description>
    <label>Successful Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>