unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/fields/ebotdata__Topic_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Topic_Name__c</fullName>
    <description>Name of the topic that relates to the dialog/intent</description>
    <label>Topic Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>