unpackaged/main/default/objects/ebotdata__Bot_Chat_Log__c/listViews/ebotdata__With_Details.listView-meta.xml
<ListView>
    <fullName>ebotdata__With_Details</fullName>
    <columns>NAME</columns>
    <columns>ebotdata__Business_Metric_Type__c</columns>
    <columns>ebotdata__Current_Confidence_For_Utterance__c</columns>
    <columns>ebotdata__Current_Dialog_Name__c</columns>
    <columns>ebotdata__Intent_Name__c</columns>
    <columns>ebotdata__Intent_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>With Details</label>
</ListView>